# trx-viewer

./: .gitignore  README.md  expression_filter.py  main.py  pyproject.toml  requirements.txt  trx.py
ViewerGUI/: Main.qml  OutputContainer.qml  Style.qml  qmldir
trx_viewer/: __main__.py  expression_filter.py  tests_model.py  trx_viewer.py
trx_viewer/ViewerGUI/: Main.qml  OutputContainer.qml
