[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trx-viewer"
version = "0.1.0"
authors = [
    { name="Roddy Rappaport", email="roddy.rappaport@gmail.com" },
]
description = "A helper program for reading .NET test files (TRX)"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]
dependencies = [
    "PySide6>=6.8.0"
]

[project.scripts]
trx-viewer = "trx_viewer.trx_viewer:main"

[tool.hatch.build.targets.wheel]
include = [
  "trx_viewer/"
]
